--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -45,6 +45,13 @@ Data, and Methods},
   year = {2020}
 }
 
+@techreport{ILTS,
+  author = {Denton, Cheryl M.},
+  title = {Maritimes Region Inshore Lobster Trawl Survey Technical Description.},
+  institution = {Can. Tech. Rep. Fish. Aquat. Sci. 3376: v + 52 p. },
+  year = {2020}
+}
+
 @techreport{Lesage2018,
   author = {Lesage, V. and Gosselin, J-F. and Lawson, J. W. and McQuinn, I. and Moors-Murphy, H. and Plourde, S. and Sears. R. and Simard Y.},
   title = {Habitats important to blue whales ({\it Balaenoptera musculus}) in the Western North Atlantic},
@@ -99,7 +106,6 @@ Data, and Methods},
   year = {2016},
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0}
 }
-
 
 @misc{OpenData_MAR_RV,
   author = {DFO},
@@ -158,7 +164,7 @@ Data, and Methods},
 }
 
 @techreport{WSDB,
-  author = {MacDonald, D.; Emery, P. and Themelis, D. and Smedbol, R.K. and Harris, L.E. and and McCurdy, Q.},
+  author = {MacDonald, D.; Emery, P. and Themelis, D. and Smedbol, R.K. and Harris, L.E. and McCurdy, Q.},
   title = {Marine mammal and pelagic animal sightings (Whalesightings) database: a user’s guide},
   institution = {Can. Tech. Rep. Fish. Aquat. Sci. 3244: v + 44 p.},
   year = {2017}
@@ -318,5 +324,4 @@ Data, and Methods},
   note = {R package version 2021.02.05},
   url = {https://github.com/Maritimes/Mar.datawrangling}
 }
-
 
