fix pasBay data typos, add pasbay to text

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -65,32 +65,11 @@ Data, and Methods},
   howpublished = {Ocean Biodiversity Information System (OBIS). Intergovernmental Oceanographic Commission of UNESCO. www.obis.org. Accessed: 2021-01-21}
 }
 
-@misc{OpenData_SARrange,
-  author = {DFO},
-  title = {Fisheries and Oceans Canada Species at Risk Distribution (Range) [Dataset]},
-  year = {2019},
-  howpublished = {Retrieved from http://open.canada.ca/data/en/dataset/522d1b67-30d8-4a34-9b62-5da99b1035e6}
-}
-
-@misc{OpenData_SARcriticalhabitat,
-  author = {DFO},
-  title = {Critical Habitat of Species at Risk [Dataset]},
-  year = {2021},
-  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c}
-}
-
 @misc{OpenData_blue_imphabitat,
   author = {DFO},
   title = {Northern Bottlenose Whale Important Habitat [Dataset]},
   year = {2019},
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/8fafd919-fcbe-43a3-a911-3d9461273441}
-}
-
-@misc{OpenData_nbw_imphabitat,
-  author = {DFO In Preparation.},
-  title = {Northern Bottlenose Whale Important Habitat [Dataset]},
-  year = {2021},
-  howpublished = {Retrieved from http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf}
 }
 
 @misc{OpenData_cetacean_imp,
@@ -112,6 +91,34 @@ Data, and Methods},
   title = {Maritimes Research Vessel Surveys [Dataset]},
   year = {2021},
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/8ddcaeea-b806-4958-a79f-ba9ab645f53b}
+}
+
+@misc{OpenData_nbw_imphabitat,
+  author = {DFO In Preparation.},
+  title = {Northern Bottlenose Whale Important Habitat [Dataset]},
+  year = {2021},
+  howpublished = {Retrieved from http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf}
+}
+
+@misc{OpenData_pasBay,
+  author = {DFO.},
+  title = {Passamaquoddy Bay biodiversity trawl [Dataset]},
+  year = {2020},
+  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/2dfa19db-a8cf-4460-97b9-710c2b856276}
+}
+
+@misc{OpenData_SARrange,
+  author = {DFO},
+  title = {Fisheries and Oceans Canada Species at Risk Distribution (Range) [Dataset]},
+  year = {2019},
+  howpublished = {Retrieved from http://open.canada.ca/data/en/dataset/522d1b67-30d8-4a34-9b62-5da99b1035e6}
+}
+
+@misc{OpenData_SARcriticalhabitat,
+  author = {DFO},
+  title = {Critical Habitat of Species at Risk [Dataset]},
+  year = {2021},
+  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c}
 }
 
 @techreport{NARWCdatabase,
