--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -5,7 +5,7 @@ editor_options:
 ---
 
 ```{r fish-setup}
-filesLoaded <- load_rdata(c("rv_rr", "ilts_rr", "isdb_rr", "marfis_rr", "ocearch_rr", "obisFish_rr"), "MAR", env = environment())
+filesLoaded <- load_rdata(c("rv_rr", "pasBay_rr", "ilts_rr", "isdb_rr", "marfis_rr", "ocearch_rr", "obisFish_rr"), "MAR", env = environment())
 
 ```
 
@@ -15,7 +15,6 @@ filesLoaded <- load_rdata(c("rv_rr", "ilts_rr", "isdb_rr", "marfis_rr", "ocearch
 This section describes outputs derived from a variety of data sources, internal and external to DFO. Area-specific outputs are provided in sub-sections labelled according to the data source. Descriptions of the source data and appropriate references and contacts are provided at the beginning of each sub-section.
 
 ### **Maritimes Research Vessel (RV) Survey**{#RV-section}
-
 
 ```{r rv-meta, results='asis'}
 write_meta(rv_rr, "EN")
@@ -84,8 +83,58 @@ knitr::kable(rvAllTable, align="l", caption="\\label{tab:rv_freq_table}Quality T
 }
 ```
 
+### **Passamaquoddy Bay Biodiversity Trawls (PBBT)**  {#pasBay-section}
 
+```{r pasBay-meta, results='asis'}
+write_meta(pasBay_rr, "EN")
+```
 
+Dataset description from the Open Data record [@OpenData_pasBay]:
+```{r pasBay-text, results='asis'}
+writeLines(noquote(pasBay_rr$text$en))
+```
+
+#### ***Area-specific search results for the Passamaquoddy Bay Biodiversity Trawls***
+
+```{r pasBay-results, include=FALSE, cache=FALSE}
+pasBayClipped <- master_intersect(pasBay_rr$data_sf, mapDataList)
+
+tableList <- create_table_ilts(pasBayClipped$studyData, listed_species)
+pasBayAllTable <- tableList$allSpecies
+pasBaySarTable <- tableList$sarData
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[PBBT](#pasBay-section)", pasBaySarTable, "Common Name", "Common Name")
+
+```
+
+```{r pasBay-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+pasBayCheck <- if (!is.null(pasBayClipped$studyData)) {
+    "* There are relevant records in the Passamaquoddy Bay Biodiversity Trawls for this search area."
+  } else {
+    "* There are no relevant records in the Passamaquoddy Bay Biodiversity Trawls for this search area. "
+  }
+writeLines(noquote(pasBayCheck))
+```
+
+```{r pasBay-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: None. Map showing the search area defined by the user (red outline) used to query information from the Passamaquoddy Bay Biodiversity Trawls.  Blue lines indicate the location of each trawl sample.'}
+
+if (!is.null(pasBayClipped$studyData)) {
+    plot_rr_sf(areaMap, pasBayClipped$mapData, lwd = 0.7, colour = "blue")
+}
+```
+<br>
+```{r pasBay-SAR-table}
+if (!is.null(pasBayClipped$studyData)) {
+  if (nrow(pasBaySarTable) > 0) {
+    knitr::kable(pasBaySarTable, align="l", caption="\\label{tab:pasBay_SAR_table}Quality Tier: High. Security level: None. Passamaquoddy Bay Biodiversity Trawl observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  }
+}
+```
+<br>
+```{r pasBay-all-table}
+if (!is.null(pasBayClipped$studyData)) {
+knitr::kable(pasBayAllTable, align="l", caption="\\label{tab:pasBay_all_table}Quality Tier: High. Security level: none. Passamaquoddy Bay Biodiversity Trawl observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
 
 
 ### **Inshore Lobster Trawl Survey (ILTS)**  {#ilts-section}
@@ -119,7 +168,7 @@ writeLines(noquote(iltsCheck))
 ```
 
 
-```{r ilts-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query information from the Lobster Trawl Survey. Black lines and arrows indicate the location and direction of each NEST trawl sample. Frequency represents number of trawls in which a given species was sampled, relative to the total number of trawls within the search area.'}
+```{r ilts-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query information from the Lobster Trawl Survey. Blue lines indicate the location of each trawl sample.'}
 
 if (!is.null(iltsClipped$studyData)) {
     plot_rr_sf(areaMap, iltsClipped$mapData, lwd = 1, colour = "blue")
@@ -136,7 +185,7 @@ if (!is.null(iltsClipped$studyData)) {
 <br>
 ```{r ilts-all-table}
 if (!is.null(iltsClipped$studyData)) {
-knitr::kable(iltsAllTable, align="l", caption="\\label{tab:ilts_all_table}Quality Tier: High. Security level: none. Inshore Lobster Trawl Survey (ITLS) observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(iltsAllTable, align="l", caption="\\label{tab:ilts_all_table}Quality Tier: High. Security level: Protected B. Inshore Lobster Trawl Survey (ITLS) observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
