--- a/app/Rmd/exec_summary.Rmd
+++ b/app/Rmd/exec_summary.Rmd
@@ -32,7 +32,8 @@ minYear <- 2010
 lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source) # check helpers.R for a list of packages
 copy_rdata_files() # make sure data files are up to date. 
 filesLoaded <- load_rdata(c("CommonData", "sardist_rr", "crithab_rr", "leatherback_rr", 
-                            "rv_rr", "ilts_rr", "isdb_rr", "marfis_rr", "obisFish_rr", "ocearch_rr", 
+                            "rv_rr", "ilts_rr", "isdb_rr", "marfis_rr", "obisFish_rr",
+                            "sturg_rr", "ocearch_rr", 
                             "wsdb_rr", "whitehead_rr", "obisCet_rr", "blueWhaleHab_rr", 
                             "nbw_rr", "narwc_rr", "rockweed_rr", "ebsa_rr",
                             "conservationSites_rr", "finWhale_rr", "harbourPorpoise_rr",
@@ -125,6 +126,15 @@ summarySarTable <- add_col_to_sar_summary(summarySarTable, "MARFIS", marfisSarTa
 # OBIS
 obisTable <- create_table_OBIS(obisFish_rr$data_sf)
 summarySarTable <- add_col_to_sar_summary(summarySarTable, "OBIS", obisTable, "Common Name", "Common Name")
+
+# STURGEON
+if (!is.null(sturg_rr$data_sf)) {
+   sturgSummaryRow <- data.frame("CommonName" = c("Atlantic Sturgeon"))
+} else {
+  sturgSummaryRow <- NULL
+}
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "Sturgeon",
+                                          sturgSummaryRow, "CommonName", "CommonName")
 
 # OCEARCH
 if (!is.null(ocearch_rr$data_sf)) {
