--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -5,7 +5,7 @@ editor_options:
 ---
 
 ```{r fish-setup}
-filesLoaded <- load_rdata(c("rv_rr", "ilts_rr", "isdb_rr", "marfis_rr", "ocearch_rr", "obisFish_rr"), "MAR", env = environment())
+filesLoaded <- load_rdata(c("rv_rr", "ilts_rr", "isdb_rr", "marfis_rr", "sturg_rr", "ocearch_rr", "obisFish_rr"), "MAR", env = environment())
 
 ```
 
@@ -267,6 +267,54 @@ if (!is.null(outputList$studyData)) {
 ```{r obis-table, echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
 if (!is.null(outputList$studyData)) {
   knitr::kable(obisTable, align="l", caption="Quality Tier: Medium. Security level: none. Ocean Biodiversity Information System (OBIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+
+
+### **Atlantic Sturgeon Foraging Areas in the Upper Bay of Fundy ** {#sturg-section}
+```{r sturg-meta, results='asis'}
+write_meta(sturg_rr, "EN")
+```
+
+Areas in the Minas Basin were selected for spatial analysis to examine foraging grounds for Atlantic Sturgeon, through a combination of using UAV’s, a novel approach to geoscience, with bottom sediment grain-size collection. Temporal studies will be carried out in the southern bight of Minas Basin at the Kingsport tidal-channel-flat complex to understand and document temporal morphodynamics. The Kingsport area will be studied as these tidal flats are used extensively by Atlantic Sturgeon for foraging from June to September and a large data set of grain size exists that can be used to help validate morphodynamic models. Ultimately this project will be used to predict future change to the tidal flats of the Minas Basin if a large scale tidal project such as the one proposed for Minas Channel is approved and to help understand Atlantic Sturgeons use of muddy tidal flats. This summary provides updates of validated foraging grounds for Atlantic Sturgeon identified though this project. 
+
+#### ***Area-specific Atlantic Sturgeon search results:***
+```{r sturg-results, include=FALSE, cache=FALSE}
+sturgOutputList <- master_intersect(sturg_rr$data_sf, mapDataList)
+
+if (!is.null(sturgOutputList$studyData)) {
+   sturgSummaryRow <- data.frame("CommonName" = c("Atlantic Sturgeon"))
+} else {
+  sturgSummaryRow <- NULL
+}
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[Sturgeon](#sturg-section)",
+                                          sturgSummaryRow, "CommonName", "CommonName")
+
+```
+
+
+```{r sturg-check, echo=FALSE, results='asis',}
+sturgCheck <- if (is.null(sturgOutputList$studyData)) {
+  "* There are no relevant records of Atlantic Sturgeon foraging areas (selected sites) for this search area. "
+}else {
+  "* There are relevant records of  Atlantic Sturgeon foraging areas (selected sites) for this search area. "
+}
+writeLines(noquote(sturgCheck))
+```
+
+```{r sturg-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Survey sites illustrating Atlantic Sturgeon Foraging Areas sampled during 2020 in the Upper Bay of Fundy. Note that this map mostly represents survey sites. This map should not be interpreted as a comprehensive list of Atlantic Sturgeon foraging areas as additional locations are available, although not yet sampled, in the upper Bay of Fundy.  '}
+if (!is.null(sturgOutputList$studyData)) {
+  plot_rr_sf(areaMap, sturgOutputList$mapData, sturg_rr$attribute, outlines=FALSE, 
+             labelData=sturgOutputList$mapData, labelAttribute = "siteId")
+}
+```
+
+```{r sturg-table, echo=FALSE, results='asis', caption="MPA table"}
+if (!is.null(sturgOutputList$studyData)) {
+  sturgTable <- dplyr::select(sturgOutputList$studyData, c("siteId", "Site"))
+  st_geometry(sturgTable) <- NULL
+  names(sturgTable) <- c("Site Id", "Site")
+  knitr::kable(sturgTable, align="l", caption="Quality Tier: High Security level: none. Names of Survey sites for Atlantic Sturgeon Foraging Areas sampled during 2020.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
