--- a/app/Rmd/intro_FR.Rmd
+++ b/app/Rmd/intro_FR.Rmd
@@ -30,7 +30,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, fig.align 
 minYear <- 2010
 lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source) # check helpers.R for a list of packages
 copy_rdata_files() # make sure data files are up to date. 
-filesLoaded <- load_rdata(c("CommonData"), "MAR", env = environment())
+load_rdata(c("CommonData"), "MAR", env = environment())
 ```
 
 ```{r Load-Search-Area, echo=FALSE, include=FALSE, cache=FALSE}
