--- a/app/Rmd/report_fish_FR.Rmd
+++ b/app/Rmd/report_fish_FR.Rmd
@@ -4,16 +4,15 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r fish-setup}
-filesLoaded <- load_rdata(c("rv_rr", "pasBay_rr", "ilts_rr", "isdb_rr", "marfis_rr", "ocearch_rr", "obisFish_rr"), "MAR", env = environment())
-
-```
-
 ## **POISSONS ET INVERTÉBRÉS**
 
 La présente section décrit les résultats tirés des sources de données suivantes : Enquête sur les navires de recherche (NR) dans les Maritimes, Base de données des relevés de l’industrie (BDRI), Système d’information sur les pêches des Maritimes (SIPMAR) et Système d’information sur la biodiversité des océans (SIBO). Les extrants propres à une zone sont fournis dans des sous-sections marquées selon la source de données. Des descriptions des données sources et des références et personnes-ressources appropriées sont fournis au début de chaque sous-section.
 
 ### **Enquête sur les navires de recherche dans les Maritimes**   
+
+```{r rv-load, include=FALSE}
+load_rdata(c("rv_rr"), "MAR", env = environment())
+```
 
 ```{r rv-meta, results='asis'}
 write_meta(rv_rr, "FR")
@@ -23,8 +22,6 @@ Description de l’ensemble de données (tirée du dossier des données ouvertes
 ```{r rv-text, results='asis'}
 writeLines(noquote(rv_rr$text$fr))
 ```
-
-
 
 ```{r table-RV-read, echo=FALSE, cache=FALSE, include = FALSE}
 table_RV <- read.csv(here::here("app/data/misc/table_RV_FR.csv"))
@@ -36,7 +33,56 @@ knitr::kable(table_RV, align="l",
 ```
 
 
+#### ***Résultats des enquêtes sur les navires de recherche dans les Maritimes, par zone***
+
+```{r RV-results, include=FALSE, cache=FALSE}
+outputList <- master_intersect(rv_rr$data_sf, mapDataList, Year = minYear)
+
+Samples_bbox <- outputList$mapPoints
+
+tableList <- create_table_RV(outputList$studyData, listed_species)
+rvAllTable <- tableList$allSpecies
+rvSarTable <- tableList$sarData
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[RV](#RV-section)", rvSarTable, "Common Name", "Individuals")
+
+```
+*
+```{r RV-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+Report_RV <- if (is.null(outputList$studyData)) {
+    "Il n’existe aucun registre pertinent des enquêtes sur les navires de recherche dans les Maritimes pour cette zone de recherche."
+  } else {
+    "Il existe des registres pertinents des enquêtes sur les navires de recherche dans les Maritimes pour cette zone de recherche."
+  }
+Report_RV<-noquote(Report_RV)
+writeLines(Report_RV)
+```
+
+```{r RV-plot, fig.height=8, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge), utilisée pour demander des renseignements sur l’enquête sur le navire de recherche dans les Maritimes. Les lignes et les flèches noires indiquent l’emplacement et la direction de chaque exemple de chalut de fond à panneaux. La fréquence représente le nombre de chaluts où une espèce donnée a été échantillonnée, en comparaison au nombre total de chaluts dans la zone de recherche.'}
+if (!is.null(outputList$studyData)) {
+areaMap + geom_segment(aes(x = Samples_bbox$long, y = Samples_bbox$lat, xend = Samples_bbox$ELONG, yend = endy <- Samples_bbox$ELAT),arrow=arrow(length = unit(0.2,"cm")), size = 0.5)
+}
+```
+<br>
+```{r RV-SAR-table}
+if (!is.null(outputList$studyData)) {
+  if (nrow(rvSarTable) > 0) {
+    knitr::kable(rvSarTable, align="l", caption="\\label{tab:rv_SAR_table} Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Registres d’observation de l’enquête sur les navires de recherche dans les Maritimes des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  }
+}
+```
+<br>
+```{r RV-freq-table}
+if (!is.null(outputList$studyData)) {
+  knitr::kable(rvAllTable, align="l", caption="\\label{tab:rv_freq_table}QNiveau de qualité : Élevée. Niveau de sécurité : Aucun. Registres d’observation de l’enquête sur les navires de recherche dans les Maritimes de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+
+
 ### **Chalut de biodiversité de la baie de Passamaquoddy (CBBP)**  {#pasBay-section}
+
+```{r pasBay-load, include=FALSE}
+load_rdata(c("pasBay_rr"), "MAR", env = environment())
+```
 
 ```{r pasBay-meta, results='asis'}
 write_meta(pasBay_rr, "FR")
@@ -93,6 +139,10 @@ knitr::kable(pasBayAllTable, align="l", caption="\\label{tab:pasBay_all_table}Qu
 
 ### **Inshore Lobster Trawl Survey (ILTS)**  {#ilts-section}
 
+```{r ilts-load, include=FALSE}
+load_rdata(c("ilts_rr"), "MAR", env = environment())
+```
+
 ```{r ilts-meta, results='asis'}
 write_meta(ilts_rr, "FR")
 ```
@@ -143,53 +193,15 @@ knitr::kable(iltsAllTable, align="l", caption="\\label{tab:ilts_all_table}Qualit
 ```
 
 
-#### ***Résultats des enquêtes sur les navires de recherche dans les Maritimes, par zone***
-
-```{r RV-results, include=FALSE, cache=FALSE}
-outputList <- master_intersect(rv_rr$data_sf, mapDataList, Year = minYear)
-
-Samples_bbox <- outputList$mapPoints
-
-tableList <- create_table_RV(outputList$studyData, listed_species)
-rvAllTable <- tableList$allSpecies
-rvSarTable <- tableList$sarData
-summarySarTable <- add_col_to_sar_summary(summarySarTable, "[RV](#RV-section)", rvSarTable, "Common Name", "Individuals")
-
-```
-*
-```{r RV-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_RV <- if (is.null(outputList$studyData)) {
-    "Il n’existe aucun registre pertinent des enquêtes sur les navires de recherche dans les Maritimes pour cette zone de recherche."
-  } else {
-    "Il existe des registres pertinents des enquêtes sur les navires de recherche dans les Maritimes pour cette zone de recherche."
-  }
-Report_RV<-noquote(Report_RV)
-writeLines(Report_RV)
-```
-
-```{r RV-plot, fig.height=8, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge), utilisée pour demander des renseignements sur l’enquête sur le navire de recherche dans les Maritimes. Les lignes et les flèches noires indiquent l’emplacement et la direction de chaque exemple de chalut de fond à panneaux. La fréquence représente le nombre de chaluts où une espèce donnée a été échantillonnée, en comparaison au nombre total de chaluts dans la zone de recherche.'}
-if (!is.null(outputList$studyData)) {
-areaMap + geom_segment(aes(x = Samples_bbox$long, y = Samples_bbox$lat, xend = Samples_bbox$ELONG, yend = endy <- Samples_bbox$ELAT),arrow=arrow(length = unit(0.2,"cm")), size = 0.5)
-}
-```
-<br>
-```{r RV-SAR-table}
-if (!is.null(outputList$studyData)) {
-  if (nrow(rvSarTable) > 0) {
-    knitr::kable(rvSarTable, align="l", caption="\\label{tab:rv_SAR_table} Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Registres d’observation de l’enquête sur les navires de recherche dans les Maritimes des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
-  }
-}
-```
-<br>
-```{r RV-freq-table}
-if (!is.null(outputList$studyData)) {
-  knitr::kable(rvAllTable, align="l", caption="\\label{tab:rv_freq_table}QNiveau de qualité : Élevée. Niveau de sécurité : Aucun. Registres d’observation de l’enquête sur les navires de recherche dans les Maritimes de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
-}
-```
-
 ### **Bases de données des relevés de l’industrie et sur les pêches dans les Maritimes**  
 
 #### ***Base de données des relevés de l’industrie (BDRI)***  
+
+
+```{r isdb-load, include=FALSE}
+load_rdata(c("isdb_rr"), "MAR", env = environment())
+```
+
 ```{r isdb-meta, results='asis'}
 write_meta(isdb_rr, "FR")
 ```
@@ -199,6 +211,10 @@ La base de données des relevés de l’industrie (BDRI) est une base de donnée
 Sans consentement écrit, Pêches et Océans Canada n’est pas autorisé à communiquer des renseignements ou des produits de données de la BDRI (comme des cartes et des couches de données) qui pourraient révéler des renseignements personnels ou de tiers comme les prises, les valeurs au débarquement et les lieux de pêche propres aux navires, car ces renseignements sont considérés comme confidentiels. Des renseignements sur la politique de protection des renseignements personnels sont disponibles dans les lignes directrices sur la diffusion informelle à l’intention du personnel du MPO (c.-à-d. Annexe B – « Renseignements sur les prises et l’effort et sur les quotas : À faire et à ne pas faire lors de la diffusion informelle » \\\\ent.dfo-mpo.ca\\ATLShares\\Shared\\ATIP Information\\Information_Release_Guidelines-eng.docx). Si vous souhaitez inclure des données d’observateurs dans une publication, n’oubliez pas de les agréger (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r).
 
 #### ***Système d’information sur les pêches des Maritimes (SIPMAR)***  
+
+```{r marfis-load, include=FALSE}
+load_rdata(c("marfis_rr"), "MAR", env = environment())
+```
 
 ```{r marfis-meta, results='asis'}
 write_meta(marfis_rr, "FR")
@@ -277,6 +293,10 @@ if (!is.null(outputListM$studyData)) {
 ```
 ### **Système d’information sur la biodiversité des océans (SIBO)**  
 
+```{r obis-load, include=FALSE}
+load_rdata(c("obisFish_rr"), "MAR", env = environment())
+```
+
 ```{r obis-meta, results='asis'}
 write_meta(obisFish_rr, "FR")
 ```
@@ -314,6 +334,11 @@ if (!is.null(outputList$studyData)) {
 ```
 
 ### **OCEARCH Shark Tracker** {#OCEARCH-section}
+
+```{r ocearch-load, include=FALSE}
+load_rdata(c("ocearch_rr"), "MAR", env = environment())
+```
+
 ```{r ocearch-meta, results='asis'}
 write_meta(ocearch_rr, "FR")
 ```
