--- a/app/Rmd/report_habitat_FR.Rmd
+++ b/app/Rmd/report_habitat_FR.Rmd
@@ -3,16 +3,14 @@ output: html_document
 editor_options: 
   chunk_output_type: console
 ---
-
-```{r habitat-setup}
-filesLoaded <- load_rdata(c("rockweed_rr"), "MAR", env = environment())
-
-```
-
 ## **INFORMATION SUR L’HABITAT**
 
 ### **Végétation intertidale et fucus**
 Cartes satellitaires de la végétation intertidale et des polygones de présence de fucus
+
+```{r rockweed-load, include=FALSE}
+load_rdata(c("rockweed_rr"), "MAR", env = environment())
+```
 
 ```{r rockweed-meta, results='asis'}
 write_meta(rockweed_rr, "FR")
