--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -339,6 +339,65 @@ if (!is.null(outputList$studyData)) {
 }
 ```
 
+
+### **Regional Electrofishing Surveys** {#ef-section}
+
+```{r ef-load, include=FALSE}
+load_rdata(c("ef_rr"), "MAR", env = environment())
+```
+
+```{r ef-meta, results='asis'}
+write_meta(ef_rr, "EN")
+```
+
+The following is information summarized from Gibson et al. (2011) and Bowlby et al. (2013). Region wide electrofishing surveys in the Southern Upland region of Nova Scotian rivers were conducted in 2000 and in 2008/2009. Both surveys were and found to be similar in terms of total effort and coverage with a few differences. Marginally more sites were completed in 2008–2009 than in 2000 (151 versus 128), and two more rivers were visited (54 in 2008–2009; 52 in 2000). The majority of rivers in the latter survey were electrofished in 2008. However, as water conditions in 2008 prevented sampling in several rivers (predominantly north of the St. Mary’s River), the survey was continued in 2009 to fill in this gap. Electrofishing surveys have supported assessments of Atlantic salmon juvenile abundance, and information about other species including American eel, Brook Trout, Brown Trout, and White Sucker. This sections provides information primarily on species presence during these surveys. The absence of a species in the following summary should be interpreted as an absence of reporting, not necessarily as an absence of the species in a given river. For additional information, please access the following technical reports…
+
+#### ***Area-specific electrofishing survey search results***
+```{r ef-results, include=FALSE, cache=FALSE}
+efOutputList <- master_intersect(ef_rr$data_sf, mapDataList)
+
+tableList <- create_table_ilts(efOutputList$studyData, listed_species, uniqueCols = c("geometry", "year"))
+efAllTable <- tableList$allSpecies
+efSarTable <- tableList$sarData
+
+if (!is.null(efOutputList$studyData)) {
+  summarySarTable <- add_col_to_sar_summary(summarySarTable, 
+                                            "[Electrofishing](#ef-section)",
+                                            efSarTable, "Common Name",
+                                            "Common Name")
+}
+
+```
+
+```{r ef-check, echo=FALSE, results='asis',}
+efReport <- if (is.null(efOutputList$studyData)) {
+  "* There are no relevant electrofishing suvey records for this search area."
+} else {
+  "* There are relevant electrofishing suvey records for this search area."
+}
+writeLines(noquote(efReport))
+```
+
+```{r ef-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user (red outline) was used to query information from electrofishing survey records. The absence of a species in this figure should be interpreted as an absence of tracking data, not necessarily as an absence of the species in the area. Some sites were surveyed in multiple years. '}
+if (!is.null(efOutputList$studyData)) {
+  plot_rr_sf(areaMap, efOutputList$mapData, attribute = ef_rr$attribute)
+}
+```
+<br>
+```{r ef-SAR-table}
+if (!is.null(efOutputList$studyData)) {
+  if (nrow(efSarTable) > 0) {
+    knitr::kable(efSarTable, align="l", caption="\\label{tab:ilts_SAR_table} Quality Tier: High. Security level: None. Electrofishing survey records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  }
+}
+```
+<br>
+```{r ef-all-table}
+if (!is.null(efOutputList$studyData)) {
+knitr::kable(efAllTable, align="l", caption="\\label{tab:ilts_all_table}Quality Tier: High. Security level: Protected B. Electrofishing survey records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+
 ### **OCEARCH Shark Tracker** {#OCEARCH-section}
 
 ```{r ocearch-load, include=FALSE}
