fix rownames on sturgeon table

--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -386,6 +386,7 @@ if (!is.null(sturgOutputList$studyData)) {
 if (!is.null(sturgOutputList$studyData)) {
   sturgTable <- dplyr::select(sturgOutputList$mapData, c("siteId", "Site"))
   st_geometry(sturgTable) <- NULL
+  row.names(sturgTable) <- NULL
   names(sturgTable) <- c("Site Id", "Site")
   knitr::kable(sturgTable, align="l", caption="Quality Tier: High Security level: none. Names of Survey sites for Atlantic Sturgeon Foraging Areas sampled during 2020.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
